--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,12 @@ dependencies {
     developmentOnly "${springBoot}-devtools:${springVersion}"
 
     /**
+     * Logging dependencies
+     */
+    implementation "com.google.flogger:flogger:0.7.4"
+    implementation "com.google.flogger:flogger-system-backend:0.7.4"
+
+    /**
      * Annotation processors
      */
     compileOnly lombok
