update(RestService): using WebClient instead of RestTemplate for better performance

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
      */
     implementation "${springBoot}-starter-web:${springVersion}"
     developmentOnly "${springBoot}-devtools:${springVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     /**
      * Logging dependencies
