--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "com.github.johnrengelman.shadow" version "7.0.0"
     id 'org.springframework.boot' version '2.6.3'
     id "org.sonarqube" version "3.3"
 }
@@ -48,6 +49,19 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.looqbox.challenge.ChallengeApplication'
+        )
+    }
+}
+
+shadowJar {
+    archiveFileName.set("app.jar")
+    destinationDirectory.set(file("$rootDir/target/"))
 }
 
 configurations {
