feat(TestApplication): new performance unit test, update(PokemonUpdateTask): changed Callable to Runnable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.jpa.hibernate.ddl-auto=update
-
 spring.cache.type=REDIS
 
+# Redis credentials
 spring.redis.host=localhost
 spring.redis.username="default"
 spring.redis.port=45020
 spring.redis.password="GUxU4^U>MIn{x?BCO?N#8X16|7cJbNKi"
 
+# Redis configuration
 spring.redis.timeout=60000
 spring.cache.redis.time-to-live=600000
 spring.cache.redis.cache-null-values=false
 spring.cache.redis.use-key-prefix=true
 
+# Variables
 pokeapi.url="https://pokeapi.co/api/v2/"
